# pdf-editor

./: .env.example  .gitignore  AGENTS.md  README.md  nightshift.sh
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  deps.py  main.py
backend/app/models/: schemas.py
backend/app/prompts/: orchestrator_plan.py
backend/app/routers/: edit.py  pdf.py
backend/app/services/: edit_engine.py  model_provider.py  orchestrator.py  pdf_editor.py  pdf_service.py  state_manager.py
backend/app/storage/: session.py
backend/data/aabead3626704726b5caf20261f25168/: metadata.json
backend/tests/: conftest.py  generate_fixture.py  test_conversation_context.py  test_e2e_orchestrator.py  test_e2e_phase2_5.py  test_edge_cases.py  test_edit_ws.py  test_font_quality.py  test_layout_awareness.py  test_manual_api.py  test_model_provider.py  test_orchestrator_e2e.py  test_orchestrator_prompt.py  test_pdf_editor.py  test_pdf_editor_v2.py  test_pipeline_e2e.py  test_recent_fixes.py  test_reflow.py  test_routing_eval.py  test_state_manager.py  test_visual_description.py
backend/tests/eval_results/: routing_eval_20260315_162236.json  routing_eval_20260315_162710.json  routing_eval_20260315_162946.json
backend/tests/test_data_layout/1052854266354e59b1d5ba4d2bd4aa5e/: metadata.json
backend/tests/test_data_layout/1052854266354e59b1d5ba4d2bd4aa5e/edits/: page_1_v0_layout.json  page_1_v0_vis_desc.txt
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  (+1 more)
(+26 files in other folders)
